--- a/app/src/main/res/drawable/first_button.xml
+++ b/app/src/main/res/drawable/first_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="2dp">
-    <!-- you can use any color you want -->
+    android:padding="2dp"
+    android:shape="rectangle">
     <solid android:color="#007500"/>
     <corners android:radius="3dp"/>
 
